# hyperdex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.template
backend/app/: __init__.py  config.py  main.py  models.py
backend/data/p1/: consistent_set.csv  detailed_97.csv  detailed_97.md  new_bonferroni.csv  phase1_5_verdict.md  phase1_verdict.md
backend/edge_factory/: .gitignore  CAHIER_DES_CHARGES.md  FINDINGS.md  _equities_research.json  _xs_research.json  adapter.py  autonomous.py  backtest.py  coinalyze.py  costs.py  critic.py  cross_sectional.py  equities_adapter.py  funding.py  gbm.py  generator.py  hawkes.py  hawkes_signal.py  hl_adapter.py  hunt.py  hunt_memory.json  hunters.py  hypothesis_dsl.py  lead_lag.py  liq_recorder.py  liq_spike.py  llm_hypothesis.py  metrics.py  neutralize.py  numerai_connector.py  obi_backtest.py  obi_recorder.py  obi_signal.py  oi_signal.py  oi_volume_signal.py  oi_xs.py  permutation.py  pyrightconfig.json  recency.py  regime_beta.py  (+77 more)
backend/scripts/p1/: _discovery_validation.py  _p1_5_detail_analysis.py  _p1_5_validation.py
backend/scripts/p1_6/: _p1_6_validation.py  hyperstats_ingest.py  hypertracker_ingest.py  merge_pool.py
backend/scripts/p2/: _analyze_paper.py  _dsr_pbo.py  _gen_consistent_set.py  _p1_5_v5_deep_fresh.py  _paper_detail.py  _reservoir_hold_v3.py  _reservoir_s3_spike.py  _revalidate_capped.py  _scalp_analysis.py  _smoke_dry_run.py  _veracity_split_28d.py  _veracity_split_v2.py  (+2 more)
backend/tests/: test_fill_simulator.py  test_state_recovery.py  test_wallet_perf_logical.py
(+16 files in other folders)
